# openfactory-virtual-assets

./: .gitignore  README.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json  uns.yml
.github/: dependabot.yml
.github/workflows/: barcode_reader.yml  event_gen.yml  lint.yml  opcua_sensor.yml  pr-checks.yml  temp_controller.yml  temp_sensor.yml
scripts/: README.md  bump_version.py  requirements_scripts.txt  validate_version.sh
virtual_assets/: README.md
virtual_assets/barcode_reader/: Dockerfile  README.md  barcode_reader.yml
virtual_assets/barcode_reader/src/: barcode_reader.py  barcode_reader_setup.py  config.py  logging_config.py
virtual_assets/event_generator/: Dockerfile  README.md  device.xml  event_generator.yml  virtual_event_generator.py
virtual_assets/opcua_sensor/: Dockerfile  README.md  opcua_device.py  opcua_sensor.yml
virtual_assets/temp_controller/: Dockerfile  README.md  opcua_temp_ctrl.yml
virtual_assets/temp_controller/debug/: change_setpoint.py
virtual_assets/temp_controller/src/: autotune.py  pid.py  plant.py  temp_controller.py  temperature_controller_setup.py
virtual_assets/temp_sensor/: Dockerfile  README.md  adapter.py  device.xml  temp_sensor.yml
